<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/black"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_name"
                android:inputType="none"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_string"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/find_string"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/AscButton"
            android:layout_width="9dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foregroundTint="@color/black"
            android:text="@string/acsend_string"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/DescButton"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/descend_string" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>